--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Emma & Liam's Wedding</title>
+<title>Raj & Ailsa's Wedding</title>
 
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
@@ -107,8 +107,8 @@
 <body>
 
 <header>
-    <h1>Emma & Liam</h1>
-    <p>July 15, 2026 · Springfield</p>
+    <h1>Raj & Ailsa</h1>
+    <p>Feb 19-20, 2026 · Kerala, India</p>
 </header>
 
 <section>
@@ -118,16 +118,16 @@
 
 <section>
     <h2>Our Story</h2>
-    <p>We met in the most unexpected way... and here we are, ready to say "I do"! 
-    We can’t wait to celebrate this special day with our favorite people.</p>
+    <p>We met in the most unexpected way... and here we are, ready to tie the bond! 
+    We can’t wait to celebrate this special day with our closest friends and family.</p>
 </section>
 
 <section>
     <h2>Event Details</h2>
-    <p><strong>Date:</strong> July 15, 2026</p>
-    <p><strong>Venue:</strong> Rose Garden Hall, Springfield</p>
-    <p><strong>Time:</strong> Ceremony starts at 4:00 PM</p>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18..." width="100%" height="300" style="border:0;" allowfullscreen></iframe>
+    <p><strong>Date:</strong> Feb 19, 2026</p>
+    <p><strong>Venue:</strong> Kerala</p>
+    <p><strong>Time:</strong> Ceremony starts at xx:00 PM</p>
+    <iframe src="https://www.google.fr/maps/place/Kerala,+India/@10.5442343,74.8162908,8z/data=!3m1!4b1!4m6!3m5!1s0x3b0812ffd49cf55b:0x64bd90fbed387c99!8m2!3d10.1631526!4d76.6412712!16zL20vMGJ5aDhq?entry=ttu&g_ep=EgoyMDI1MDgwNi4wIKXMDSoASAFQAw%3D%3D" width="100%" height="300" style="border:0;" allowfullscreen></iframe>
 </section>
 
 <section>
@@ -151,17 +151,16 @@
     <p>We are so grateful for your presence! If you’d like to give a gift, here are our registry links:</p>
     <ul>
         <li><a href="https://www.amazon.com" target="_blank">Amazon Registry</a></li>
-        <li><a href="https://www.target.com" target="_blank">Target Registry</a></li>
     </ul>
 </section>
 
 <footer>
-    <p>Emma & Liam's Wedding | #EmmaAndLiam2026</p>
+    <p>Raj & Ailsa's Wedding | #RajAndAilsa2026</p>
 </footer>
 
 <script>
     // Countdown Timer
-    const weddingDate = new Date("July 15, 2026 16:00:00").getTime();
+    const weddingDate = new Date("Feb 19, 2026 14:00:00").getTime();
     const timer = setInterval(function() {
         const now = new Date().getTime();
         const distance = weddingDate - now;
