improved webpage with accommodation and event planning sections index.html

--- a/index.html
+++ b/index.html
@@ -138,13 +138,24 @@
 </section>
 
 <section>
-    <h2>Gallery</h2>
+    <h2>Photos</h2>
     <div class="gallery">
-        <img src="https://images.unsplash.com/photo-1530023367847-a683933f4171?auto=format&fit=crop&w=800&q=80" alt="Engagement photo 1">
+<!--         <img src="https://images.unsplash.com/photo-1530023367847-a683933f4171?auto=format&fit=crop&w=800&q=80" alt="Engagement photo 1">
         <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?auto=format&fit=crop&w=800&q=80" alt="Engagement photo 2">
-        <img src="https://images.unsplash.com/photo-1529692236671-f1d6e0a1fa09?auto=format&fit=crop&w=800&q=80" alt="Engagement photo 3">
+        <img src="https://images.unsplash.com/photo-1529692236671-f1d6e0a1fa09?auto=format&fit=crop&w=800&q=80" alt="Engagement photo 3"> -->
     </div>
 </section>
+
+<section>
+    <h2>Accommodation and other details</h2>
+    <p>TO come:</p>
+</section>
+
+<section>
+    <h2>Event planning</h2>
+    <p>To come</p>
+</section>
+
 
 <section>
     <h2>Gift Registry</h2>
