--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <h2>RSVP</h2>
     <p>Please let us know if you’ll be able to attend by filling out the form below:</p>
     <!-- Replace FORM_LINK_HERE with your actual Google Form embed link -->
-    <iframe src="https://forms.gle/eU1YTwFBXznjaCta8" rel="stylesheet" width="100%" height="600" style="border:none;"></iframe>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSemInS7D-cBgCs13zzkBErga0uFSegm38covmsPGZ-XES6zNw/viewform?usp=dialog" rel="stylesheet" width="100%" height="600" style="border:none;"></iframe>
 </section>
 
 <section>
