details updated.html

--- a/index.html
+++ b/index.html
@@ -148,21 +148,21 @@
 
 <section>
     <h2>Accommodation and other details</h2>
-    <p>TO come:</p>
+    <p>We are working on various accommodation options </p>
 </section>
 
 <section>
-    <h2>Event planning</h2>
-    <p>To come</p>
+    <h2>Events Plan</h2>
+    <p>We are planning fun events for you! Stay tuned. </p>
 </section>
 
 
 <section>
     <h2>Gift Registry</h2>
-    <p>We are so grateful for your presence! If you’d like to give a gift, here are our registry links:</p>
-    <ul>
+    <p>Unfortunately, we can not carry gifts back to France. We are so grateful for your presence! </p>
+<!--     <ul>
         <li><a href="https://www.amazon.com" target="_blank">Amazon Registry</a></li>
-    </ul>
+    </ul> -->
 </section>
 
 <footer>
