--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 
 <section>
     <h2>Our Story</h2>
-    <p>We met in the most unexpected way... and here we are, ready to tie the bond! 
-    We can’t wait to celebrate this special day with our closest friends and family.</p>
+    <p>We met in the most unexpected way... and here we are, ready to tie the knot! 
+    We can’t wait to celebrate this special ocassion with our closest friends and family.</p>
 </section>
 
 <section>
@@ -152,7 +152,7 @@
 </section>
 
 <section>
-    <h2>Events Plan</h2>
+    <h2>Event Planning and Dress Code</h2>
     <p>We are planning fun events for you! Stay tuned. </p>
 </section>
 
