included activities section.html

--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
 <section>
     <h2>Photos</h2>
     <div class="gallery">
-<!--         <img src="https://images.unsplash.com/photo-1530023367847-a683933f4171?auto=format&fit=crop&w=800&q=80" alt="Engagement photo 1">
-        <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?auto=format&fit=crop&w=800&q=80" alt="Engagement photo 2">
-        <img src="https://images.unsplash.com/photo-1529692236671-f1d6e0a1fa09?auto=format&fit=crop&w=800&q=80" alt="Engagement photo 3"> -->
+<!--         <img src="https://images.unsplash.com/photo-1530023367847-a683933f4171?auto=format&fit=crop&w=800&q=80" alt="Engagement photo 1"> -->
+        <img src="1000070214.jpg" alt="1">
+        <img src="1000070214.jpg" alt="2">
     </div>
 </section>
 
@@ -156,7 +156,43 @@
     <p>We are planning fun events for you! Stay tuned. </p>
 </section>
 
+<section>
+<p>
+Alleppey (also known as Alappuzha) in Kerala is a beautiful and unique destination, often called the "Venice of the East." It offers a perfect blend of serene backwaters, beautiful beaches, and rich cultural experiences, making it an excellent location for a wedding and a memorable trip for your guests.
+</p>
+    <h2>Activities: <h2>
+<p> Here are some fun activities in and around Alleppey:
 
+Backwater Experiences (The Main Attraction)
+The backwaters are the heart of Alleppey. There are several ways for your guests to explore this stunning network of canals, lakes, and lagoons.
+
+Houseboat Cruise: This is the most iconic experience. Guests can book a houseboat (known as a kettuvallam) for a day cruise or an overnight stay. Houseboats are like floating hotels, with bedrooms, bathrooms, and a kitchen. They offer a luxurious and relaxing way to see the lush green scenery, paddy fields, and local village life.
+
+Shikara Boat Ride: For a more intimate and budget-friendly experience, a Shikara boat ride is a great option. These are smaller, traditional-style motorized canoe boats that can navigate the narrower canals, giving guests a closer look at the local life and hidden gems of the backwaters.
+
+Kayaking or Canoeing: For the more adventurous guests, a kayaking or canoeing tour allows for a peaceful and self-paced exploration of the waterways. This is a fantastic way to get some exercise and enjoy the tranquility of the backwaters.
+
+Beaches
+Alleppey and its surrounding area have some beautiful and less-crowded beaches.
+
+Alappuzha Beach: The main beach in town, it's known for its serene atmosphere, a historic 150-year-old pier, and an old lighthouse. It's a great spot to relax, watch the sunset, or try some local snacks.
+
+Marari Beach: Located about 11 km from Alleppey, this is a more tranquil and pristine beach. It's a perfect place for guests to unwind, enjoy the soft sand, and experience a more secluded coastal environment.
+
+Thumpoly Beach: A hidden gem, this beach is known for its scenic beauty and cleanliness. It's a great spot for bird watching, as many canals meet the Arabian Sea here.
+
+Cultural and Local Experiences
+Visit the Alappuzha Lighthouse: This historic lighthouse, built in 1862, is a landmark of the city. Guests can climb to the top for panoramic views of the beach and the town.
+
+Explore Local Life in Kuttanad: Known as the "Rice Bowl of Kerala," Kuttanad is a region with vast paddy fields that are cultivated below sea level. Your guests can take a village tour to see the unique agricultural methods, duck farms, and spice cultivations.
+
+See a Traditional Snake Boat: If your wedding coincides with the season (typically August and September), guests might be able to witness or learn about the famous snake boat races, like the Nehru Trophy Boat Race. Even if not, they can see a traditional snake boat at a boatyard.
+Go Temple and Church Hopping: Alleppey is a melting pot of cultures. Guests can visit a variety of ancient and beautiful places of worship, such as the Ambalappuzha Sree Krishna Temple, Mullakkal Rajarajeswari Temple, or St. Andrew's Basilica in Arthunkal.
+Visit the International Coir Museum: Alleppey is famous for its coir industry. Guests can learn about the process of making coir from coconut husks and see various handicrafts and products.
+Enjoy an Ayurvedic Massage: Kerala is a hub for Ayurvedic treatments. Recommending a rejuvenating massage or spa session would be a perfect way for your guests to relax and de-stress.
+Try Toddy Tapping: Guests can get a taste of local life by visiting a toddy shop and seeing the traditional process of toddy tapping (collecting palm wine). </p>
+</section>
+    
 <section>
     <h2>Gift Registry</h2>
     <p>Unfortunately, we can not carry gifts back to France. We are so grateful for your presence! </p>
