--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ Try Toddy Tapping: Guests can get a taste of local life by visiting a toddy shop
 </section>
 
 <footer>
-    <p>Raj & Ailsa's Wedding | #RajAndAilsa2026</p>
+    <p>Raj & Ailsa's Wedding | #RajAndAilsa2026| website updated: 22/8/25 </p>
 </footer>
 
 <script>
