--- a/index.html
+++ b/index.html
@@ -159,10 +159,8 @@
 </section>
 
 <section>
-<p>
-Alleppey (also known as Alappuzha) in Kerala is a beautiful and unique destination, often called the "Venice of the East." It offers a perfect blend of serene backwaters, beautiful beaches, and rich cultural experiences, making it an excellent location for a wedding and a memorable trip for your guests.
-</p>
     <h2>Activities: <h2>
+    <p> Alleppey (also known as Alappuzha) in Kerala is a beautiful and unique destination, often called the "Venice of the East." It offers a perfect blend of serene backwaters, beautiful beaches, and rich cultural experiences, making it an excellent location for a wedding and a memorable trip for your guests.</p>
 <p> Here are some fun activities in and around Alleppey:
 Backwater Experiences (The Main Attraction)
 The backwaters are the heart of Alleppey. There are several ways for your guests to explore this stunning network of canals, lakes, and lagoons.
@@ -181,7 +179,7 @@ See a Traditional Snake Boat: If your wedding coincides with the season (typical
 Go Temple and Church Hopping: Alleppey is a melting pot of cultures. Guests can visit a variety of ancient and beautiful places of worship, such as the Ambalappuzha Sree Krishna Temple, Mullakkal Rajarajeswari Temple, or St. Andrew's Basilica in Arthunkal.
 Visit the International Coir Museum: Alleppey is famous for its coir industry. Guests can learn about the process of making coir from coconut husks and see various handicrafts and products.
 Enjoy an Ayurvedic Massage: Kerala is a hub for Ayurvedic treatments. Recommending a rejuvenating massage or spa session would be a perfect way for your guests to relax and de-stress.
-Try Toddy Tapping: Guests can get a taste of local life by visiting a toddy shop and seeing the traditional process of toddy tapping (collecting palm wine). </p>
+Try Toddy Tapping: Guests can get a taste of local life by visiting a toddy shop and seeing the traditional process of toddy tapping (collecting palm wine).</p>
 </section>
     
 <section>
