--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@
 
     // Photo Slideshow Script
     const photoPaths = [
-        "images/photo1.jpg", 
-        "images/photo2.jpg",
-        "images/photo3.jpg",
-        "images/photo4.jpg",
-        "images/photo5.jpg"
+        "1000066475.jpg", 
+        "1000070214.jpg"
+        // "images/photo3.jpg",
+        // "images/photo4.jpg",
+        // "images/photo5.jpg"
     ];
 
     let currentPhotoIndex = 0;
