--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 </section>
 
 <footer>
-    <p>Raj & Ailsa's Wedding | #RajAndAilsa2026| website updated: 22/8/25 </p>
+    <p>Raj & Ailsa's Wedding | #RajAndAilsa2026| website updated: 22/8/25 v 1.0 </p>
 </footer>
 
 <script>
