--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 <section>
     <h2>Activities:</h2>
-    <p>Alleppey (also known as Alappuzha) in Kerala is a beautiful and unique destination, often called the "Venice of the East." It offers a perfect blend of serene backwaters, beautiful beaches, and rich cultural experiences, making it an excellent location for a wedding and a memorable trip for your guests.</p>
+    <p>Alleppey (also known as Alappuzha) in Kerala is a beautiful and unique destination, often called the "Venice of the East." It offers a perfect blend of serene backwaters, beautiful beaches, and rich cultural experiences, making it an excellent location for a wedding and a memorable trip for guests.</p>
 
     <p>Here are some fun activities in and around Alleppey:</p>
 
@@ -196,10 +196,7 @@
             <strong>Visit the Alappuzha Lighthouse:</strong> This historic lighthouse, built in 1862, is a landmark of the city. Guests can climb to the top for panoramic views of the beach and the town.
         </li>
         <li>
-            <strong>Explore Local Life in Kuttanad:</strong> Known as the "Rice Bowl of Kerala," Kuttanad is a region with vast paddy fields that are cultivated below sea level. Your guests can take a village tour to see the unique agricultural methods, duck farms, and spice cultivations.
-        </li>
-        <li>
-            <strong>See a Traditional Snake Boat:</strong> If your wedding coincides with the season (typically August and September), guests might be able to witness or learn about the famous snake boat races, like the Nehru Trophy Boat Race. Even if not, they can see a traditional snake boat at a boatyard.
+            <strong>Explore Local Life in Kuttanad:</strong> Known as the "Rice Bowl of Kerala," Kuttanad is a region with vast paddy fields that are cultivated below sea level. Guests can take a village tour to see the unique agricultural methods, duck farms, and spice cultivations.
         </li>
         <li>
             <strong>Go Temple and Church Hopping:</strong> Alleppey is a melting pot of cultures. Guests can visit a variety of ancient and beautiful places of worship, such as the Ambalappuzha Sree Krishna Temple, Mullakkal Rajarajeswari Temple, or St. Andrew's Basilica in Arthunkal.
@@ -208,7 +205,7 @@
             <strong>Visit the International Coir Museum:</strong> Alleppey is famous for its coir industry. Guests can learn about the process of making coir from coconut husks and see various handicrafts and products.
         </li>
         <li>
-            <strong>Enjoy an Ayurvedic Massage:</strong> Kerala is a hub for Ayurvedic treatments. Recommending a rejuvenating massage or spa session would be a perfect way for your guests to relax and de-stress.
+            <strong>Enjoy an Ayurvedic Massage:</strong> Kerala is a hub for Ayurvedic treatments. Recommending a rejuvenating massage or spa session would be a perfect way for guests to relax and de-stress.
         </li>
         <li>
             <strong>Try Toddy Tapping:</strong> Guests can get a taste of local life by visiting a toddy shop and seeing the traditional process of toddy tapping (collecting palm wine).
