--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         /* Flexbox container for side-by-side sections */
         .content-container {
             display: flex;
-            flex-wrap: wrap; /* Allows sections to wrap on small screens */
+            flex-wrap: wrap;
             justify-content: space-between;
             gap: 20px;
             max-width: 900px;
@@ -90,25 +90,27 @@
         }
 
         .content-container section {
-            flex: 1; /* Makes sections flexible and equal width */
-            min-width: 300px; /* Prevents sections from getting too small before wrapping */
+            flex: 1;
+            min-width: 300px;
             padding: 20px;
         }
 
-        /* Photo Slideshow styles */
+        /* Photo Slideshow styles - FIXED */
         #photo-slideshow {
             position: relative;
             width: 100%;
-            height: 100%; /* Fills the height of its parent section */
-            margin: auto;
+            padding-top: 56.25%; /* 16:9 aspect ratio */
             overflow: hidden;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
         #slideshow-image {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: cover; /* keeps it stable, crops edges if needed */
             opacity: 0;
             transition: opacity 1s ease-in-out;
         }
@@ -120,7 +122,7 @@
         .iframe-container {
             position: relative;
             width: 100%;
-            padding-bottom: 75%; /* 4:3 Aspect Ratio (adjust as needed) */
+            padding-bottom: 75%; /* 4:3 Aspect Ratio */
             height: 0;
             overflow: hidden;
         }
