--- a/index.html
+++ b/index.html
@@ -168,16 +168,16 @@
 </section>
 
 <section>
-    <h2>Our Story</h2>
-    <p>We met in the most unexpected way... and here we are, ready to tie the knot! We can’t wait to celebrate this special occasion with our closest friends and family.</p>
+    <h2></h2>
+    <p>Here we are, ready to tie the knot! We can’t wait to celebrate this special occasion with our closest friends and family.</p>
 </section>
 
 <div class="content-container">
     <section>
         <h2>Event Details</h2>
-        <p><strong>Date:</strong> Feb 19, 2026</p>
+        <p><strong>Date:</strong> Feb 19 - 20, 2026</p>
         <p><strong>Venue:</strong> Kerala</p>
-        <p><strong>Time:</strong> Ceremony starts at 2:00 PM</p>
+        <p><strong>Time:</strong> Ceremony starts at Noon</p>
         <div class="iframe-container">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d983.7184783409782!2d76.3552467285284!3d9.519682699407698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0884fa2eac59fb%3A0xca0799cc685a8bb6!2sPalmgrove%20Lake%20Resort!5e0!3m2!1sen!2sfr!4v1755351880452!5m2!1sen!2sfr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
@@ -295,9 +295,16 @@
     const photoPaths = [
         "1000066475.jpg",
         "1000070214.jpg"
-        // "images/photo3.jpg",
-        // "images/photo4.jpg",
-        // "images/photo5.jpg"
+        "1.jpg",
+        "2.jpg",
+        "4.jpg",
+        "6.jpg", 
+        "7.jpg",
+        "8.jpg",
+        "9.jpg",
+        "11.jpg",
+        "12.jpg",
+        "13.jpg",
     ];
 
     let currentPhotoIndex = 0;
