--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
         #photo-slideshow {
             position: relative;
             width: 100%;
-            max-width: 800px; /* maximum frame width */
-            height: 450px; /* fixed height */
+            max-width: 900px; /* Increased maximum width */
+            height: 600px; /* Increased height */
             margin: auto;
             overflow: hidden;
             border-radius: 10px;
