updated website with videos

--- a/index.html
+++ b/index.html
@@ -176,6 +176,24 @@
             padding: 20px;
             margin-top: 50px;
         }
+        
+        .video-list {
+            list-style: none;
+            padding: 0;
+            text-align: center;
+        }
+        .video-list li {
+            margin-bottom: 20px;
+        }
+        .video-list a {
+            font-size: 1.1em;
+            color: #d46b82;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+        .video-list a:hover {
+            color: #b94c67;
+        }
     </style>
 </head>
 <body>
@@ -189,6 +207,7 @@
     <a href="#countdown-section">Countdown</a>
     <a href="#details-section">Details</a>
     <a href="#photos-section">Photos</a>
+    <a href="#videos-section">Videos</a>
     <a href="#rsvp-section">RSVP</a>
     <a href="#activities-section">Activities</a>
 </nav>
@@ -222,6 +241,20 @@
     </section>
 </div>
 
+<section>
+    <h2>Our Wedding Venue</h2>
+    <p>Our wedding will take place at the beautiful [Palmgrove Lake Resort | Alappuzha](https://www.palmgrovelakeresort.com/). For more information about the resort, including accommodation and amenities, please visit their website. </p>
+</section>
+
+<section id="videos-section">
+    <h2>Videos</h2>
+    <ul class="video-list">
+        <li><a href="http://www.youtube.com/watch?v=0FppfN4LKOA">Passion Fruit</a></li>
+        <li><a href="http://www.youtube.com/watch?v=ucu2lM-qbME">Sunrise Experience - Canoe</a></li>
+        <li><a href="http://www.youtube.com/watch?v=Cm88-CNHztw">Morning Lake</a></li>
+        <li><a href="http://www.youtube.com/watch?v=xs7xwAfwChg">Palmgrove</a></li>
+    </ul>
+</section>
 <section id="rsvp-section">
     <h2>RSVP</h2>
     <p>Please let us know if you’ll be able to attend by filling out the form below:</p>
