--- a/index.html
+++ b/index.html
@@ -158,16 +158,76 @@
             padding-bottom: 75%; /* 4:3 Aspect Ratio */
             height: 0;
             overflow: hidden;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
 
         .iframe-container iframe {
             position: absolute;
-            top:0;
+            top: 0;
             left: 0;
             width: 100%;
             height: 100%;
         }
 
+        /* Video Slideshow */
+        #video-slideshow-container {
+            position: relative;
+            max-width: 800px;
+            margin: 30px auto;
+        }
+        .video-player-container {
+            position: relative;
+            width: 100%;
+            padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+            height: 0;
+            overflow: hidden;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .video-player-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+        .video-title {
+            text-align: center;
+            font-family: 'Playfair Display', serif;
+            color: #d46b82;
+            margin-top: 10px;
+            font-size: 1.5em;
+        }
+        .video-nav-btn {
+            cursor: pointer;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            width: auto;
+            padding: 16px;
+            color: white;
+            font-weight: bold;
+            font-size: 20px;
+            transition: background-color 0.6s ease;
+            border-radius: 0 3px 3px 0;
+            user-select: none;
+            background-color: rgba(0,0,0,0.5);
+            text-decoration: none;
+            z-index: 10;
+        }
+        .prev {
+            left: 0;
+            border-radius: 3px 0 0 3px;
+        }
+        .next {
+            right: 0;
+            border-radius: 3px 0 0 3px;
+        }
+        .video-nav-btn:hover {
+            background-color: rgba(0,0,0,0.8);
+        }
+        
         /* Footer */
         footer {
             text-align: center;
@@ -176,28 +236,9 @@
             padding: 20px;
             margin-top: 50px;
         }
-        
-        .video-list {
-            list-style: none;
-            padding: 0;
-            text-align: center;
-        }
-        .video-list li {
-            margin-bottom: 20px;
-        }
-        .video-list a {
-            font-size: 1.1em;
-            color: #d46b82;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-        .video-list a:hover {
-            color: #b94c67;
-        }
     </style>
 </head>
 <body>
-
 <header>
     <h1>Raj & Ailsa</h1>
     <p>Feb 19-20, 2026 · Kerala, India</p>
@@ -207,7 +248,6 @@
     <a href="#countdown-section">Countdown</a>
     <a href="#details-section">Details</a>
     <a href="#photos-section">Photos</a>
-    <a href="#videos-section">Videos</a>
     <a href="#rsvp-section">RSVP</a>
     <a href="#activities-section">Activities</a>
 </nav>
@@ -226,10 +266,19 @@
     <section id="details-section">
         <h2>Event Details</h2>
         <p><strong>Date:</strong> Feb 19 - 20, 2026</p>
-        <p><strong>Venue:</strong> Kerala</p>
         <p><strong>Time:</strong> Ceremony starts at Noon</p>
+        <p><strong>Venue:</strong> Our wedding will take place at the beautiful Palmgrove lake resort <a href="https://www.palmgrovelakeresort.com/">Palmgrove Lake Resort</a> in Kerala. For more information about the resort, including accommodation and amenities, please visit their website. </p>
+
         <div class="iframe-container">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d983.7184783409782!2d76.3552467285284!3d9.519682699407698!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0884fa2eac59fb%3A0xca0799cc685a8bb6!2sPalmgrove%20Lake%20Resort!5e0!3m2!1sen!2sfr!4v1755351880452!5m2!1sen!2sfr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <h3>Videos of the Venue</h3>
+        <div id="video-slideshow-container">
+            <div class="video-player-container">
+                <iframe id="video-player" src="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div id="video-title" class="video-title"></div>
+            <a class="video-nav-btn prev" onclick="changeVideo(-1)">&#10094;</a>
+            <a class="video-nav-btn next" onclick="changeVideo(1)">&#10095;</a>
         </div>
     </section>
 
@@ -241,20 +290,6 @@
     </section>
 </div>
 
-<section>
-    <h2>Our Wedding Venue</h2>
-    <p>Our wedding will take place at the beautiful [Palmgrove Lake Resort | Alappuzha](https://www.palmgrovelakeresort.com/). For more information about the resort, including accommodation and amenities, please visit their website. </p>
-</section>
-
-<section id="videos-section">
-    <h2>Videos</h2>
-    <ul class="video-list">
-        <li><a href="http://www.youtube.com/watch?v=0FppfN4LKOA">Passion Fruit</a></li>
-        <li><a href="http://www.youtube.com/watch?v=ucu2lM-qbME">Sunrise Experience - Canoe</a></li>
-        <li><a href="http://www.youtube.com/watch?v=Cm88-CNHztw">Morning Lake</a></li>
-        <li><a href="http://www.youtube.com/watch?v=xs7xwAfwChg">Palmgrove</a></li>
-    </ul>
-</section>
 <section id="rsvp-section">
     <h2>RSVP</h2>
     <p>Please let us know if you’ll be able to attend by filling out the form below:</p>
@@ -386,6 +421,35 @@
 
     changePhoto();
     setInterval(changePhoto, 5000);
+
+    // Video Slideshow Script
+    const videos = [
+        { url: "https://www.youtube.com/embed/M7z2j2D_c5A", title: "Passion Fruit" },
+        { url: "https://www.youtube.com/embed/V6sI5R_oBwU", title: "Sunrise Experience - Canoe" },
+        { url: "https://www.youtube.com/embed/0Qf9y5-rS9A", title: "Morning Lake" },
+        { url: "https://www.youtube.com/embed/D3eL83_N1lI", title: "Palmgrove" }
+    ];
+    let currentVideoIndex = 0;
+    const videoPlayer = document.getElementById("video-player");
+    const videoTitle = document.getElementById("video-title");
+
+    function updateVideo() {
+        videoPlayer.src = videos[currentVideoIndex].url;
+        videoTitle.textContent = videos[currentVideoIndex].title;
+    }
+
+    function changeVideo(direction) {
+        currentVideoIndex += direction;
+        if (currentVideoIndex < 0) {
+            currentVideoIndex = videos.length - 1;
+        } else if (currentVideoIndex >= videos.length) {
+            currentVideoIndex = 0;
+        }
+        updateVideo();
+    }
+
+    // Initial video load
+    updateVideo();
 </script>
 
 </body>
