--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
             position: absolute;
             top: 50%;
             left: 50%;
-            width: auto;
+            width: 100%;
             height: 100%;
             transform: translate(-50%, -50%);
-            object-fit: contain; /* ensures image fits inside the frame */
+            object-fit: cover;
             opacity: 0;
             transition: opacity 1s ease-in-out;
         }
